July 22, 2023: More updates  to NuGet package DataJuggler.Excelerate, and I need this update for my project Blazor Excelerate

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -39,6 +39,12 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>
+		July 22, 2023: More updates  to NuGet package DataJuggler.Excelerate, and I need this update for my project
+		Blazor Excelerate
+
+		July 21, 2023: I updated NuGet package DataJuggler.Excelerate, and I need this update for my project
+		Blazor Excelerate
+
 		July 18, 2023: I fixed the checkbox component. The binding wasn't working when I thought I fixed it last time.
 
 		July 9, 2023: I removed floats from the ComboBox component. I was having trouble "stacking" a ValidationComponent
@@ -372,7 +378,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.9.6</Version>
+    <Version>7.9.21</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
@@ -423,7 +429,7 @@ Now is the time to break anything.
 
   <ItemGroup>
     <PackageReference Include="BlazorStyled" Version="3.1.0" />
-    <PackageReference Include="DataJuggler.Excelerate" Version="7.2.12" />
+    <PackageReference Include="DataJuggler.Excelerate" Version="7.3.18" />
     <PackageReference Include="DataJuggler.UltimateHelper" Version="7.1.3" />
   </ItemGroup>
 
