--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -39,6 +39,8 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>
+		August 13, 2023: DataJuggler.UltimateHelper and DataJuggler.Excelerate was updated.
+		
 		July 22, 2023: More updates  to NuGet package DataJuggler.Excelerate, and I need this update for my project
 		Blazor Excelerate
 
@@ -378,7 +380,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.9.21</Version>
+    <Version>7.10.0</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
@@ -429,8 +431,8 @@ Now is the time to break anything.
 
   <ItemGroup>
     <PackageReference Include="BlazorStyled" Version="3.1.0" />
-    <PackageReference Include="DataJuggler.Excelerate" Version="7.3.18" />
-    <PackageReference Include="DataJuggler.UltimateHelper" Version="7.1.3" />
+    <PackageReference Include="DataJuggler.Excelerate" Version="7.4.2" />
+    <PackageReference Include="DataJuggler.UltimateHelper" Version="7.1.7" />
   </ItemGroup>
 
 
