--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -39,7 +39,7 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>
-		August 13, 2023: DataJuggler.UltimateHelper and DataJuggler.Excelerate was updated.
+		August 13, 2023: DataJuggler.UltimateHelper and DataJuggler.Excelerate were updated.
 		
 		July 22, 2023: More updates  to NuGet package DataJuggler.Excelerate, and I need this update for my project
 		Blazor Excelerate
@@ -431,7 +431,7 @@ Now is the time to break anything.
 
   <ItemGroup>
     <PackageReference Include="BlazorStyled" Version="3.1.0" />
-    <PackageReference Include="DataJuggler.Excelerate" Version="7.4.2" />
+    <PackageReference Include="DataJuggler.Excelerate" Version="7.4.3" />
     <PackageReference Include="DataJuggler.UltimateHelper" Version="7.1.7" />
   </ItemGroup>
 
