--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -7,8 +7,7 @@
     <Authors>DataJuggler</Authors>
     <Description>A collection of components to make building a Blazor project simpler. 
 This project consists of an ImageButton, ProgressBar, Sprite, Validation component, 
-and ComboBox, a CheckedListBox and a grid. The Grid is working, but very new. Examples coming soon, but
-I have to get paying work done first.
+ComboBox, a CheckedListBox, Grid and a Label. The Label is new, and has only been tested a little.
 
 The CSS file DataJuggler.Blazor.Components.css contains many useful classes to help style 
 and position objects.
@@ -30,7 +29,7 @@ which makes it simple to dynamically alter CSS values using Blazor.
 
 New to version 1.3 is a new really cool progress bar that uses all CSS by 
 http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://firchow.net/</Description>
-    <Copyright>2022 - Data Juggler - Use For Anything You Want, No Warranty.</Copyright>
+    <Copyright>2023 - Data Juggler - Use For Anything You Want, No Warranty.</Copyright>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components</PackageProjectUrl>
     <PackageIcon>Merge Boxes Small.png</PackageIcon>
@@ -39,6 +38,14 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>
+		Version 7.13.7: Updated the Read Me with information about the new video.
+		
+		Version 7.13.6:
+		New Video: 
+		
+		How To Use The Grid
+		https://youtu.be/_qDo9pNT5a8
+
 		Version 7.13.5
 		Novermber 7, 2023: DataJuggler.Blazor.Components passed 100,000 Downloads
 		I updated the Grid and created a new sample project to demo the Grid.
@@ -395,7 +402,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.13.6</Version>
+    <Version>7.14.0</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
@@ -455,6 +462,7 @@ Now is the time to break anything.
     <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
