--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -27,9 +27,9 @@ A live demo is available at https://excelerate.datajuggler.com
 And the code for Blazor Excelerate is here:
 https://github.com/DataJuggler/Blazor.Excelerate
 
-This project uses a really awesome project called BlazorStyled by Chanen Braunstein (I think I spelled that right), 
-which makes it simple to dynamically alter CSS values using Blazor.
-.NET 7.0 is the only supported version going forward.
+(No Longer Uses Blazor Styled).
+This project has now removed Blazor Styled. 
+.NET 8.0 is the only supported version going forward.
 
 New to version 1.3 is a new really cool progress bar that uses all CSS by 
 http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://firchow.net/</Description>
@@ -40,7 +40,7 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <PackageIconUrl />
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
-    <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
+    <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,ValidationComponent</PackageTags>
     <PackageReleaseNotes>
 		Version 8.0.0: This project has been updated to .NET 8. 
 		
@@ -322,7 +322,7 @@ Version 1.5.0 - I updated to .Net 5.
 New version 1.4
 Validation Component
 
-1.4.11 - For some reason I added Open and Close curly brackets to a BlazorStyled Class.
+1.4.11 - For some reason I added Open and Close curly brackets to a Blazor Styled Class.
 Oops. Time for bed soon.
 
 1.4.10 - I was not using the Css classes that were in this library, except for the circle.scss, so I removed them.
@@ -357,7 +357,7 @@ when CheckBoxMode = true.
 1.3.5 - I added a SetClientHandledIncrement method so I can turn this value on or off from outside the component.
 
 1.3.4 - I got this working finally. The property Important was needed to make the text color override.
-I actually am not using BlazorStyled for the Progress Bar now, which makes setup just add the Nuget package and the Css reference to Circles.css, which is easier for everyone.
+I actually am not using Blazor Styled for the Progress Bar now, which makes setup just add the Nuget package and the Css reference to Circles.css, which is easier for everyone.
 
 1.3.3 - I added 3 new Parameters:
 Size: Size, Small - Medium - Large - Medium is default
@@ -410,7 +410,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>8.1.5</Version>
+    <Version>8.2.0</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
@@ -464,9 +464,10 @@ Now is the time to break anything.
 
 
   <ItemGroup>
-    <PackageReference Include="BlazorStyled" Version="3.1.0" />
     <PackageReference Include="DataJuggler.Excelerate" Version="8.0.4" />
-    <PackageReference Include="DataJuggler.UltimateHelper" Version="8.0.5" />
+    <PackageReference Include="DataJuggler.UltimateHelper" Version="8.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.3" />
   </ItemGroup>
 
 
