--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -410,7 +410,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>8.3.2</Version>
+    <Version>8.4.1</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
@@ -436,11 +436,11 @@ Now is the time to break anything.
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;IDE0059;IDE0017;IDE0090;</NoWarn>
+    <NoWarn>1701;1702;IDE0059;IDE0017;IDE0090;BL0007;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;IDE0059;IDE0017;IDE0090;</NoWarn>
+    <NoWarn>1701;1702;IDE0059;IDE0017;IDE0090;BL0007;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -464,10 +464,11 @@ Now is the time to break anything.
 
 
   <ItemGroup>
+    <PackageReference Include="DataJuggler.BlazorStyled" Version="8.0.0" />
     <PackageReference Include="DataJuggler.Excelerate" Version="8.0.4" />
     <PackageReference Include="DataJuggler.UltimateHelper" Version="8.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
   </ItemGroup>
 
 
