--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -5,34 +5,107 @@
     <RazorLangVersion>3.0</RazorLangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>DataJuggler</Authors>
-    <Description>A collection of components to make building a Blazor project simpler. 
-This project consists of an ImageButton, ProgressBar, Sprite, Validation component, 
-ComboBox, a CheckedListBox, Grid and a Label. The Label is new, and has only been tested a little.
+    <Description>
+		This project consists of an ImageButton, ProgressBar, Sprite, ValidationComponent which displays as a
+		TextBox, Multi-line TextBox or a CheckBox, a ComboBox, CheckedListComboBox, CheckedListBox, Grid, Label and a brand
+		new Calendar Component.
 
-The CSS file DataJuggler.Blazor.Components.css contains many useful classes to help style 
-and position objects.
+		The CSS file DataJuggler.Blazor.Components.css contains many useful classes to help style
+		and position objects.
 
-This version is for .Net 8.0.
+		This version is for .Net 8.0.
 
-Version 8.0.0
-This project has been updated to .NET 8. Use a 7.x version for .NET 7.
-All new development will be on the .NET 8 version.
 
-Version 7.13.5
-Novermber 7, 2023: DataJuggler.Blazor.Components passed 100,000 Downloads
-I updated the Grid and created a new sample project to demo the Grid.
 
-A live demo is available at https://excelerate.datajuggler.com
+		Version 8.0.0
+		This project has been updated to .NET 8. Use a 7.x version for .NET 7.
+		All new development will be on the .NET 8 version.
 
-And the code for Blazor Excelerate is here:
-https://github.com/DataJuggler/Blazor.Excelerate
+		4.27.2024: Eureka! I have done it. I built a working CalendarComponent, and being it has been tested by all of 1 person in all
+		of 1 project(s), I am pretty excited. If this doesn't make it worth the price, and make you willing to leave a star on GitHub
+		or Subscribe to my YouTube channel, nothing will.
 
-(No Longer Uses Blazor Styled).
-This project has now removed Blazor Styled. 
-.NET 8.0 is the only supported version going forward.
+		4.24.2024: To celebrate the coming milestone of 200,000 installs coming up this summer, I am working on a Calendar Component.
+		The Calendar Component is in this release (8.5.0), but it is far from being to use. What I am testing now is the text box shows up,
+		the button shows up, and if you click the button, the pop up calendar div shows and goes away as you toggle the button.
+		Soon I will add buttons for the calendar. Baby steps.
 
-New to version 1.3 is a new really cool progress bar that uses all CSS by 
-http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://firchow.net/</Description>
+		4.23.2024: I had some problems running the Blazor Server App projects in .NET 8. The problem was browsers (Chrome) are depreciating
+		Page Unload events, and blazor.server.js is the culprit. I switched to a web app and things work.
+		The one important thing I noticed, linking to a CSS class like this seems to not work in a Blazor Web Project (not Blazor Server App Template)
+
+		<link href="~/_content/DataJuggler.Blazor.Components/css/DataJuggler.Blazor.Components.css" rel="stylesheet" />
+
+		Removing the Tilde seems to work.
+
+		<link href="/_content/DataJuggler.Blazor.Components/css/DataJuggler.Blazor.Components.css" rel="stylesheet" />
+
+		4.18.2024: The conversion to using BlazorStyled again has completed. Testing in progress, but seems to work.
+
+		4.17.2024: I added back BlazorStyled, but I forked the project and created a NuGet package DataJuggler.BlazorStyled.
+		I didn't make any code changes, all I did was upgrade the component to .NET 8 and the dependencies.
+
+		4.8.2024: I modified the grid with a new property 'NotifyParentOnDoubleClick'. You can set
+		an ExternalId and ExternalIdDescription when you create the rows.
+		I also added an EnableClick function for a Grid row. The Click does work. Testing the DoubleClick now.
+		the parent object will receive a message. Optionally, Set the ExternalId and ExternalId Description.
+
+		4.5.2024: ImageButton does not have a ClassName property.
+
+		4.4.2024: I removed the dependency on Blazor Styled. Blazor Styled hasn't been updated since
+		.NET Core 3.1, and I found you can create a Style section on any razor page and do the same thing
+		without Blazor Styled, and with better results it seems of late.
+
+		12.30.2023: I updated the CheckBox to send a message to its Parent when it's value changes.
+		I added SetLabelColor method to the ValidationComponent.
+
+		I created a new project that uses these controls.
+
+		Snow Creator
+		https://github.com/DataJuggler/SnowCreator
+
+		Live Demo:
+		https://snowcreator.datajuggler.com
+
+		12.28.2023: I fixed a bug with the CheckedListBox where the ListItemHeight was wrong.
+
+		12.27.2023: I added the !important attribute to the ListItemZIndex CSS and ListItemHeight and CheckedListHeight.
+
+		12.26.2023: I updated DataJuggler.NET8 and DataJuggler.Excelerate Nuget packages.
+
+		12.18.2023 I fixed a bug with the ValidationComponent
+		If is valid is true, I set the label to the invalid label color. This is now fixed.
+
+		11.15.2023 I updated the project to .NET 8
+
+		For .NET 7, use a 7.x version.
+
+		11.10.2023: I added a Label
+
+		The Label provides a simple way to display text.
+
+		11.8.2023 New Video For 100,000 Installs
+
+		Version 7.13.7
+
+		How To Use DataJuggler.Blazor.Components Grid
+		https://youtu.be/_qDo9pNT5a8
+
+		Version 7.13.5
+		Novermber 7, 2023: DataJuggler.Blazor.Components passed 100,000 Downloads
+		I updated the Grid and created a new sample project to demo the Grid.
+
+		A live demo is available at https://excelerate.datajuggler.com
+
+		And the code for Blazor Excelerate is here:
+		https://github.com/DataJuggler/Blazor.Excelerate
+
+		(No Longer Uses Blazor Styled).
+		This project has now removed Blazor Styled.
+		.NET 8.0 is the only supported version going forward.
+
+		New to version 1.3 is a new really cool progress bar that uses all CSS by
+		http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://firchow.net/</Description>
     <Copyright>2023 - Data Juggler - Use For Anything You Want, No Warranty.</Copyright>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components</PackageProjectUrl>
@@ -410,7 +483,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>8.6.1</Version>
+    <Version>8.6.2</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
