--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -6,9 +6,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>DataJuggler</Authors>
     <Description>
-		This project consists of an ImageButton, ProgressBar, Sprite, ValidationComponent which can display as a
-		TextBox, Multi-line TextBox or a CheckBox, a ComboBox, CheckedListComboBox, CheckedListBox, Grid, Label and a brand
-		new Calendar Component.
+		This project consists of an ImageButton, ProgressBar, Sprite, ValidationComponent which can display as a TextBox, Multi-line TextBox or a CheckBox, a ComboBox, CheckedListComboBox, CheckedListBox, Grid, Label and a brand new Calendar Component.
 
 		The CSS file DataJuggler.Blazor.Components.css contains many useful classes to help style
 		and position objects.
@@ -391,7 +389,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>8.6.2</Version>
+    <Version>8.6.3</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
