I updated the ComboBox trying to get the selected item to be correct.

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -389,7 +389,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>8.8.1</Version>
+    <Version>8.8.2</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
@@ -424,12 +424,16 @@ Now is the time to break anything.
 
   <ItemGroup>
     <Compile Remove="bin\**" />
+    <Compile Remove="Data\**" />
     <Compile Remove="Samples\**" />
     <Content Remove="bin\**" />
+    <Content Remove="Data\**" />
     <Content Remove="Samples\**" />
     <EmbeddedResource Remove="bin\**" />
+    <EmbeddedResource Remove="Data\**" />
     <EmbeddedResource Remove="Samples\**" />
     <None Remove="bin\**" />
+    <None Remove="Data\**" />
     <None Remove="Samples\**" />    
     <None Include="License\License.txt">
       <Pack>True</Pack>
