--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -24,7 +24,7 @@
 		<RepositoryType>Git - Git Hub</RepositoryType>
 		<PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,TextBoxComponent</PackageTags>
 		<PackageReleaseNotes>See Read Me.</PackageReleaseNotes>
-		<Version>9.16.1</Version>
+		<Version>9.16.17</Version>
 		<AssemblyVersion>9.11.6</AssemblyVersion>
 		<FileVersion>9.11.6</FileVersion>
 		<Nullable>disable</Nullable>
@@ -68,7 +68,8 @@
     <EmbeddedResource Remove="Samples\**" />
     <None Remove="bin\**" />
     <None Remove="Data\**" />
-    <None Remove="Samples\**" />    
+    <None Remove="Samples\**" />
+    <Content Include="SaveCancelComponent.razor.cs" />    
     <None Include="License\License.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
